force-app/main/default/objects/DriftAlert__c/DriftAlert__c.object-meta.xml
<CustomObject>
    <label>Drift Alert</label>
    <pluralLabel>Drift Alerts</pluralLabel>
    <nameField>
        <label>Drift Alert Name</label>
        <type>AutoNumber</type>
        <displayFormat>DA-{0000}</displayFormat>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
    <description>Records portfolio drift events — created by Data Cloud-triggered Flow or manually.</description>
</CustomObject>