force-app/main/default/objects/DriftAlert__c/fields/AlertStatus__c.field-meta.xml
<CustomField>
    <fullName>AlertStatus__c</fullName>
    <label>Alert Status</label>
    <description>Current resolution status</description>
    <type>Picklist</type>
    <required>true</required>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
                <default>true</default>
                <label>New</label>
            </value>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>Resolved</fullName>
            </value>
            <value>
                <fullName>Dismissed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>