force-app/main/default/objects/DriftAlert__c/fields/ContactId__c.field-meta.xml
<CustomField>
    <fullName>ContactId__c</fullName>
    <label>Contact</label>
    <description>Affected client</description>
    <type>Lookup</type>
    <referenceTo>Contact</referenceTo>
    <relationshipName>DriftAlerts</relationshipName>
    <relationshipLabel>Drift Alerts</relationshipLabel>
    <required>true</required>
    <deleteConstraint>Restrict</deleteConstraint>
</CustomField>