force-app/main/default/objects/DriftAlert__c/fields/DetectedAt__c.field-meta.xml
<CustomField>
    <fullName>DetectedAt__c</fullName>
    <label>Detected At</label>
    <description>When drift was first detected</description>
    <type>DateTime</type>
    <required>true</required>
</CustomField>