force-app/main/default/objects/DriftAlert__c/fields/DriftPct__c.field-meta.xml
<CustomField>
    <fullName>DriftPct__c</fullName>
    <label>Drift %</label>
    <description>Computed drift at time of alert</description>
    <type>Percent</type>
    <precision>5</precision>
    <scale>2</scale>
    <required>true</required>
</CustomField>