force-app/main/default/objects/DriftAlert__c/fields/FinancialAccountId__c.field-meta.xml
<CustomField>
    <fullName>FinancialAccountId__c</fullName>
    <label>Financial Account</label>
    <description>Affected financial account</description>
    <type>Lookup</type>
    <referenceTo>FinancialAccount__c</referenceTo>
    <relationshipName>DriftAlerts</relationshipName>
    <relationshipLabel>Drift Alerts</relationshipLabel>
    <required>true</required>
    <deleteConstraint>Restrict</deleteConstraint>
</CustomField>