force-app/main/default/objects/DriftAlert__c/fields/ResolvedAt__c.field-meta.xml
<CustomField>
    <fullName>ResolvedAt__c</fullName>
    <label>Resolved At</label>
    <description>When advisor marked resolved</description>
    <type>DateTime</type>
</CustomField>