force-app/main/default/objects/DriftAlert__c/fields/TriggerSource__c.field-meta.xml
<CustomField>
    <fullName>TriggerSource__c</fullName>
    <label>Trigger Source</label>
    <description>What created this alert</description>
    <type>Picklist</type>
    <required>true</required>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Data Cloud</fullName>
                <default>true</default>
                <label>Data Cloud</label>
            </value>
            <value>
                <fullName>Manual</fullName>
            </value>
            <value>
                <fullName>Scheduled Job</fullName>
            </value>
            <value>
                <fullName>Market Event</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>