force-app/main/default/objects/DriftAlert__c/validationRules/Resolved_After_Detected.validationRule-meta.xml
<ValidationRule>
    <fullName>Resolved_After_Detected</fullName>
    <active>true</active>
    <description>Ensures the resolved date is not before the detection date.</description>
    <errorConditionFormula>AND(
  NOT(ISBLANK(ResolvedAt__c)),
  ResolvedAt__c &lt; DetectedAt__c
)</errorConditionFormula>
    <errorMessage>Resolved date cannot be before the detection date.</errorMessage>
</ValidationRule>