force-app/main/default/objects/DriftAlert__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <label>All Drift Alerts</label>
    <filterScope>Everything</filterScope>
    <columns>NAME</columns>
    <columns>ContactId__c</columns>
    <columns>FinancialAccountId__c</columns>
    <columns>DriftPct__c</columns>
    <columns>AlertStatus__c</columns>
    <columns>TriggerSource__c</columns>
    <columns>DetectedAt__c</columns>
    <columns>ResolvedAt__c</columns>
</ListView>