force-app/main/default/objects/DriftAlert__c/listViews/Open_Alerts.listView-meta.xml
<ListView>
    <fullName>Open_Alerts</fullName>
    <label>Open Alerts</label>
    <filterScope>Everything</filterScope>
    <filters>
        <field>AlertStatus__c</field>
        <operation>notEqual</operation>
        <value>Resolved,Dismissed</value>
    </filters>
    <columns>NAME</columns>
    <columns>ContactId__c</columns>
    <columns>FinancialAccountId__c</columns>
    <columns>DriftPct__c</columns>
    <columns>AlertStatus__c</columns>
    <columns>TriggerSource__c</columns>
    <columns>DetectedAt__c</columns>
</ListView>